tests/core/ill-typed/unexpected-type-for-expression/bad-return-type.stella
language core;

fn badReturn(n : Nat) -> (fn(Nat) -> Nat){
    return succ(n);
}